Updated all code

--- a/public/Deshbord.html
+++ b/public/Deshbord.html
@@ -178,7 +178,7 @@
         <li><i class="fas fa-home home-icon"></i><a href="/dasborde_main/Deshbord.html">Home</a> </li>
         <li><i class="fas fa-user profile-icon"></i><a href="  ">My Profile</a> </li>
         <li><i class="fas fa-star category-icon"></i><a href="Deshbord/category/category.html"> Category</a></li>
-        <li><i class="fas fa-shopping-cart purchase-icon"></i><a href="/dasborde_main/my purchase/my_purchase.html">My Purchase</a> </li>
+        <li><i class="fas fa-shopping-cart purchase-icon"></i><a href="/Deshbord/myPurchases/my_purchase.html">My Purchase</a> </li>
         <li><i class="fas fa-comment-dots feedback-icon"></i><a href="  "> Feedback</a></li>
         <li><i class="fas fa-dollar-sign refund-icon"></i><a href="  ">Refund/Cancellation Policy</a> </li>
         <li><i class="fas fa-shield-alt privacy-icon"></i><a href="  ">Privacy Policy</a> </li>
