--- a/public/Deshbord/myPurchases/my_purchase.html
+++ b/public/Deshbord/myPurchases/my_purchase.html
@@ -37,12 +37,12 @@
   <meta name="theme-color" content="#ffffff" />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-  <link rel="stylesheet" href="/public/css/my_purchase.css">
+  <link rel="stylesheet" href="/css/my_purchase.css">
   <script src="script.js" defer></script>
   <script src="/public/js/my_purchase.js" defer></script>
 </head>
 
-<body>
+<body> 
   <header style="
         border-bottom: 1px solid #083d5d;
         backdrop-filter: blur(4px);
@@ -74,7 +74,7 @@
       <div class="nav" id="main-nav">
         <div class="logo">
 
-          <img src="/image_all/final_logo.svg" alt="logo" height="82px" />
+          <img src="/images/final_logo.svg" alt="logo" height="82px" />
           <span><span class="material-symbols-outlined close" id="sideBarIcon" onclick="cllick()">menu</span></span>
 
         </div>
@@ -188,7 +188,7 @@
       <section class="courses">
         <div class="courses">
           <div class="course-card">
-            <img src="/image_all/image/course_carde_01.jpg" alt="Course Image">
+            <img src="/images/dashbord/jee.jpg" alt="Course Image">
             <div class="course-content">
               <h3>Course Name</h3>
               <p>Beginner Basic <span>7:37</span></p>
@@ -198,7 +198,7 @@
         </div>
         <div class="courses">
           <div class="course-card">
-            <img src="/image_all/image/course_carde_01.jpg" alt="Course Image">
+            <img src="/images/dashbord/tecnical.jpg" alt="Course Image">
             <div class="course-content">
               <h3>Course Name</h3>
               <p>Beginner Basic <span>7:37</span></p>
@@ -208,28 +208,7 @@
         </div>
         <div class="courses">
           <div class="course-card">
-            <img src="/image_all/image/course_carde_01.jpg" alt="Course Image">
-            <div class="course-content">
-              <h3>Course Name</h3>
-              <p>Beginner Basic <span>7:37</span></p>
-              <a href="#" class="btn">More Details</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="courses">
-          <div class="course-card">
-            <img src="/image_all/image/course_carde_01.jpg" alt="Course Image">
-            <div class="course-content">
-              <h3>Course Name</h3>
-              <p>Beginner Basic <span>7:37</span></p>
-              <a href="#" class="btn">More Details</a>
-            </div>
-          </div>
-        </div>
-        <div class="courses">
-          <div class="course-card">
-            <img src="/image_all/image/course_carde_01.jpg" alt="Course Image">
+            <img src="/images/dashbord/ssc.png" alt="Course Image">
             <div class="course-content">
               <h3>Course Name</h3>
               <p>Beginner Basic <span>7:37</span></p>
@@ -240,7 +219,28 @@
 
         <div class="courses">
           <div class="course-card">
-            <img src="/image_all/image/course_carde_01.jpg" alt="Course Image">
+            <img src="/images/dashbord/neet.jpg" alt="Course Image">
+            <div class="course-content">
+              <h3>Course Name</h3>
+              <p>Beginner Basic <span>7:37</span></p>
+              <a href="#" class="btn">More Details</a>
+            </div>
+          </div>
+        </div>
+        <div class="courses">
+          <div class="course-card">
+            <img src="/images/dashbord/jee.jpg" alt="Course Image">
+            <div class="course-content">
+              <h3>Course Name</h3>
+              <p>Beginner Basic <span>7:37</span></p>
+              <a href="#" class="btn">More Details</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="courses">
+          <div class="course-card">
+            <img src="/images/dashbord/10th-mpboard(1).webp" alt="Course Image">
             <div class="course-content">
               <h3>Course Name</h3>
               <p>Beginner Basic <span>7:37</span></p>
@@ -257,7 +257,7 @@
   <section class="footer">
     <footer>
       <div class="left">
-        <img src="/image_all/final_logo.svg" alt="footer logo" />
+        <img src="/images/final_logo.svg" alt="footer logo" />
         <p>
           Mig, 72, Rajiv Nagar, A Sector, Aayodhya Bypass Bhopal, Madhya Pradesh, India (462022)
         </p>
